--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
-# Ignore node_modules in both frontend and backend
-frontend/node_modules/
-backend/node_modules/
-
-# Ignore environment files
-frontend/.env
-backend/.env
-
-# Ignore build and log files
-frontend/build/
-backend/dist/
-npm-debug.log*
-yarn-debug.log*
-"node_modules/" 
+node_modules/
+.env
+dist/
+build/
